--- a/resources/index.html
+++ b/resources/index.html
@@ -227,7 +227,7 @@
                     class="svelte-gu3tcc"
                   />
                 </div>
-                <div class="toggle svelte-gu3tcc" tabindex="0">
+                <button class="toggle svelte-gu3tcc" tabindex="0">
                   <svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc">
                     <use
                       href="#symbol-menu"
@@ -240,7 +240,7 @@
                       xlink="http://www.w3.org/1999/xlink"
                     ></use>
                   </svg>
-                </div>
+                </button>
               </summary>
 
               <div id="nav-wrapper" class="svelte-gu3tcc">
@@ -434,10 +434,10 @@
                 /></a>
               </div>
               <div class="menu svelte-1u4zws">
-                <a href="https://www.si.edu/privacy/" class="svelte-1u4zws"
+                <a href="https://www.si.edu/privacy/" class="svelte-1u4zws" target="_blank"
                   >Privacy</a
                 ><span class="svelte-1u4zws">|</span
-                ><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws"
+                ><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws" target="_blank"
                   >Terms of Use</a
                 ><span class="svelte-1u4zws">|</span>© 2022 Smithsonian
                 Institution
@@ -592,7 +592,8 @@
           </svg>
         </div>
       </div>
-
+      
+      <script src="_app/i/chunks/arrowNavMenu.js"></script>
       <!-- <script type="module" data-sveltekit-hydrate="wipmv2">
 		import { start } from "../_app/i/start.js";
 		start({
