--- a/artists/storme-webber/index.html
+++ b/artists/storme-webber/index.html
@@ -246,7 +246,7 @@
                     class="svelte-gu3tcc"
                   />
                 </div>
-                <div class="toggle svelte-gu3tcc" tabindex="0">
+                <button class="toggle svelte-gu3tcc" tabindex="0">
                   <svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc">
                     <use
                       href="#symbol-menu"
@@ -259,7 +259,7 @@
                       xlink="http://www.w3.org/1999/xlink"
                     ></use>
                   </svg>
-                </div>
+                </button>
               </summary>
 
               <div id="nav-wrapper" class="svelte-gu3tcc">
@@ -647,7 +647,7 @@
                       href="../../transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-poem-r-.pdf"
                       id="audio-transcript"
                       class="svelte-tuhwmi"
-                      >Transcript</a
+                      >Transcript (PDF)</a
                     >
                   </div>
                 </div>
@@ -745,7 +745,7 @@
                   sveltekit:reload
                   href="../../transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-interview.pdf"
                   class="transcript svelte-tuhwmi"
-                  >Transcript</a
+                  >Transcript (PDF)</a
                 >
                 <div id="lvideo2" class="svelte-tuhwmi">
                   <a
@@ -936,10 +936,10 @@
                 /></a>
               </div>
               <div class="menu svelte-1u4zws">
-                <a href="https://www.si.edu/privacy/" class="svelte-1u4zws"
+                <a href="https://www.si.edu/privacy/" class="svelte-1u4zws" target="_blank"
                   >Privacy</a
                 ><span class="svelte-1u4zws">|</span
-                ><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws"
+                ><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws" target="_blank"
                   >Terms of Use</a
                 ><span class="svelte-1u4zws">|</span>© 2024 Smithsonian
                 Institution
@@ -1134,6 +1134,7 @@ starts running -->
 	</style>
 </noscript> -->
 
+  <script src="_app/i/chunks/arrowNavMenu.js"></script>
   <!--FANCYAPPS-->
   <script src="../../_app/i/chunks/fancybox.js"></script>
   <script type="module" src="../../_app/i/pages/index.js"></script>
@@ -1153,6 +1154,13 @@ starts running -->
           right: ["iterateZoom", "close"],
         },
       },
+      on: {
+        done: (fancybox, slide) => {
+          // Fancybox sets image alt to be redundant with caption.
+          // Manually make alt tag null after Fancybox runs.
+          $(".fancybox-image").attr("alt", "");
+        }
+      }
     });
   </script>
   <script>
