--- a/reflections/afro-indigenous-relations-in-a-reimagined-future/index.html
+++ b/reflections/afro-indigenous-relations-in-a-reimagined-future/index.html
@@ -90,8 +90,8 @@
 
 <details id="nav" class="svelte-gu3tcc"><summary class="level svelte-gu3tcc" tabindex="-1"><div class="logo svelte-gu3tcc"><a href="../../" class=" svelte-gu3tcc" aria-label="Ancestors Know Who We Are">Ancestors <span class="svelte-gu3tcc">Know</span> Who We Are</a></div>
     <div class="default-header--2 svelte-gu3tcc"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
-    <div class="toggle svelte-gu3tcc" tabindex="0"><svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
-      <svg id="close" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-close" xlink="http://www.w3.org/1999/xlink"></use></svg></div></summary>
+    <button class="toggle svelte-gu3tcc" tabindex="0"><svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
+      <svg id="close" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-close" xlink="http://www.w3.org/1999/xlink"></use></svg></button></summary>
 
   <div id="nav-wrapper" class="svelte-gu3tcc"><nav aria-label="Main" class="svelte-gu3tcc"><ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../from-the-curator#top" class="svelte-gu3tcc">From the Curator</a></li>
         <li class="svelte-gu3tcc"><a href="../../#artists" class="svelte-gu3tcc">Artists</a>
@@ -266,13 +266,13 @@
             the Creation of Modern Detroit</em> (University of Pennsylvania Press, 2022).
     </p></div>
 
-<div id="reflections-nav" class="svelte-15peso7"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"><span class="svelte-51v5yi">Afro-Indigenous Relations in a Reimagined Future</span>
+<div id="reflections-nav" class="svelte-15peso7"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top">
       <img id="essay1" src="../../images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../art-gender-and-identity#top"><span class="svelte-51v5yi">Art, Gender, and Identity</span>
+  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../art-gender-and-identity#top">
       <img id="essay2" src="../../images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../black-native-identity-and-futurity#top"><span class="svelte-51v5yi">Black-Native Identity and Futurity</span>
+  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../black-native-identity-and-futurity#top">
       <img id="essay3" src="../../images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../motherhood#top"><span class="svelte-51v5yi">Motherhood</span>
+  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../motherhood#top">
       <img id="essay4" src="../../images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
 </div></div>
 
@@ -297,7 +297,7 @@
       <a href="https://www.instagram.com/smithsoniannmai/" aria-label="Instagram" class="svelte-1u4zws"><img src="../../images/icons-instagram.svg" alt="Instagram" class="svelte-1u4zws"></a>
       <a href="https://www.facebook.com/NationalMuseumOfTheAmericanIndian/" aria-label="Facebook" class="svelte-1u4zws"><img src="../../images/icons-facebook.svg" alt="Facebook" class="svelte-1u4zws"></a>
       <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="../../images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
-    <div class="menu svelte-1u4zws"><a href="https://www.si.edu/privacy/" class="svelte-1u4zws">Privacy</a><span class="svelte-1u4zws">|</span><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws">Terms of Use</a><span class="svelte-1u4zws">|</span>© 2024 Smithsonian Institution
+    <div class="menu svelte-1u4zws"><a href="https://www.si.edu/privacy/" class="svelte-1u4zws" target="_blank">Privacy</a><span class="svelte-1u4zws">|</span><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws" target="_blank">Terms of Use</a><span class="svelte-1u4zws">|</span>© 2024 Smithsonian Institution
     </div></div>
   <script async src="../../_app/i/chunks/addtoany.js"></script>
   <div class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws" style="line-height: 32px;"><p class="footer--sharing-label s-CGbQ-BIh5e2Q svelte-1u4zws">Share:</p>
@@ -340,6 +340,7 @@
 <script
 src="../../_app/i/chunks/jquery-3.7.1.js"
 ></script>
+<script src="_app/i/chunks/arrowNavMenu.js"></script>
 <script src="../../_app/i/assets/check-visible.js"></script>
     <script src="../../_app/i/assets/check-visible.js"></script>
 
